[package]
name = "h3o-zip"
version = "0.1.8"
authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
edition = "2024"
description = "A compression scheme tailored for H3 cell indexes"
documentation = "https://docs.rs/h3o-zip/"
readme = "README.md"
homepage = "https://docs.rs/h3o-zip"
repository = "https://github.com/HydroniumLabs/h3o-zip"
license = "BSD-3-Clause"
keywords = ["h3", "compression"]
categories = ["algorithms"]

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
]

[dependencies]
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
either = { version = "1.0", default-features = false }
h3o = { version = "0.8", default-features = false, features = ["std"] }
h3o-bit = { version = "0.1", default-features = false }

[dev-dependencies]
byteorder = { version = "1.0", default-features = false, features = ["std"] }
criterion = { version = "0.7", default-features = false, features = ["plotters", "html_reports"] }

[[bench]]
harness = false
name = "api"

[profile.release]
lto = "thin"
